examples/valid/06_pipeline.lane
module Examples.Valid06
import Ops.*
pub fn add_three(a : Int, b : Int, c : Int) -> Int {
  a + b + c
}

pub fn pipeline_call(x : Int) -> Int {
  x |> add_three(1, 2)
}

pub fn pipeline_literal(x : Int) -> Int {
  x |> fn(value : Int) {
    value + 1
  }
}
