examples/invalid/27_unqualified_variant_without_enum_expected_type.lane
// invalid: unqualified variant patterns require an expected enum type
module Examples.Invalid.UnqualifiedVariantWithoutEnumExpectedType

pub fn bad(value : Int) -> Int {
  match value {
    some(x) => x
  }
}
